fix docs overflow on mobile

--- a/src/styles/pages/docs.scss
+++ b/src/styles/pages/docs.scss
@@ -4,12 +4,6 @@
 .docs {
 	display: flex;
 	background-color: var(--fds-solid-background-base);
-
-	// Small device support
-	@media screen and (width < 648px) {
-		// Account for the adjusted navbar height on mobile
-		block-size: calc(100vh - 64px);
-	}
 }
 
 // Docs page
@@ -28,7 +22,6 @@
 	// This is mainly here because I didn't want to use
 	// absolute positioning on the mobile search UI.
 	&-inner {
-		// flex: 1 1 auto;
 		padding: 44px 56px;
 	}
 
@@ -112,7 +105,6 @@
 	// Since we don't have a sidebar anymore, vertically stack the elements in the page
 	.docs {
 		flex-direction: column;
-		max-block-size: calc(100vh - 66px);
 		margin-block-start: 2px;
 		border-block-start: 1px solid var(--fds-card-stroke-default);
 	}
